Fixed misaligned list-group-item icons.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -285,11 +285,13 @@ span{
   background-color: #4C759A;
   font-family:'Ubuntu Condensed', sans-serif;
   padding-left: 0;
+  padding-right: 0px;
   color: white;
   font-size: 1.4em;
   border: none;
   box-shadow: 2px 2px 3px rgb(8, 35, 59);
   height: 6vh;
+
 }
 
 .list-group-item-icon {
